translation-tool/inputs/source_meta/objects/Case_SLA__mdt.object
<CustomObject>
    <fields>
        <fullName>Case_Field_Name__c</fullName>
        <label>Case Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_RecordType_Name__c</fullName>
        <label>Case RecordType Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Category__c</fullName>
        <label>Problem Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Units__c</fullName>
        <label>Value Units</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Days</fullName>
                    <default>true</default>
                    <label>Business Days</label>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case SLA</label>
    <pluralLabel>Case SLAs</pluralLabel>
</CustomObject>